fixed alignment issue

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -38,14 +38,11 @@
     }
   }
   #phone-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     button {
-      position: absolute;
-      bottom: 50px;
-      right: 15px;
-      @include tablet {
-        position: unset;
-        margin: 10px;
-      }
+      margin: 15px 0;
     }
     @include tablet {
       padding: 0px;
@@ -75,8 +72,6 @@
     100% {transform: rotate(0deg)}
   }
 }
-
-
 
 .fade {
   opacity: 0;
